# dct

./: .gitignore  README.md  pyproject.toml
dct/: __init__.py  dct.py
docs/superpowers/plans/: 2026-06-27-dct-fixes.md
docs/superpowers/specs/: 2026-06-27-dct-fixes-design.md
tests/: test_dct.py
